# fastlin

./: Cargo.toml  LICENSE  README.md  parameters.md
.github/workflows/: rust.yml
src/: analyse_sample.rs  analyse_sample_bam.rs  analyse_sample_fasta.rs  analyse_sample_fastq.rs  get_barcodes.rs  input_files.rs  main.rs  process_barcodes.rs
